[tool.poetry]
name = "music"
version = "0.1.0"
description = ""
authors = ["Dylan Gatlin <dgatlin5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncclick = "^8.1.3.4"
mutagen = "^1.46.0"
rich = "^13.3.5"
numpy = "^1.24.3"
tinytag = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
